fix failed tests -adjust dashboard buttons in dark mode -adjust notification bell position -modify default profile image accordingly

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -838,7 +838,7 @@ Dark mode
 }
 
 .dark-mode .button-bar .btn {
-    filter: brightness(90%);
+    filter: invert(56%) sepia(3%) saturate(0%) hue-rotate(149deg) brightness(84%) contrast(80%);
 }
 
 /* File card */
