--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -12,6 +12,7 @@
 .sidebar-img{
     width: 35px;
     height: 35px;
+    border-radius: 30px;
 }
 
 .avatar-name h5{
